// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > can configure a wider max width 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-kpDqfm cXNhoW ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-cwHptR xojiV"
  >
    Do you want to do the thing?
  </div>
</div>
`;

exports[`Modal > can configure fullscreen 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-kpDqfm bpMVuS ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-cwHptR PBWES"
  >
    Do you want to do the thing?
  </div>
</div>
`;
